Bug 403622 - Incorrect port positions when loading old files
Summary: Incorrect port positions when loading old files
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.27.1 (KDE Applications 18.12.1)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks: 403515
  Show dependency treegraph
 
Reported: 2019-01-26 10:51 UTC by Ralf Habacker
Modified: 2019-02-03 16:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.27.2 (KDE Appplications 18.12.2)
Sentry Crash Report:


Attachments
test case (753.35 KB, application/x-uml)
2019-01-26 10:51 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-01-26 10:51:27 UTC
Created attachment 117661 [details]
test case

STEPS TO REPRODUCE
1. start umbrello
2. load appended test file
3. select package diagram
4. select component UserAdminComponent
You will see that most ports are inside the component and not equally above the edge
5. select a port like this and try to move

OBSERVED RESULT
The port jumps to the top edge of the component

EXPECTED RESULT
After loading this file the mentioned port should be located above the edge

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: openSUSE Leap_42.3
KDE Frameworks Version: 5.54
Qt Version: 5.9

ADDITIONAL INFORMATIONS
According to UML standard the position of ports are located equally above the edge (https://de.wikipedia.org/wiki/Port_(UML))
Comment 1 Ralf Habacker 2019-01-26 12:53:41 UTC
Git commit be70c5a943c10ba6ed9c6974ec99c478e4a81b79 by Ralf Habacker.
Committed on 26/01/2019 at 12:53.
Pushed by habacker into branch 'Applications/18.12'.

Fix 'Incorrect port positions when loading old files'
FIXED-IN: 2.27.2 (KDE Appplications 18.12.2)

M  +39   -3    umbrello/umlscene.cpp

https://commits.kde.org/umbrello/be70c5a943c10ba6ed9c6974ec99c478e4a81b79
Comment 2 Ralf Habacker 2019-01-26 19:30:21 UTC
Git commit 2fe1bbce7695afa160645c90b8be7062b24e4d9d by Ralf Habacker.
Committed on 26/01/2019 at 19:23.
Pushed by habacker into branch 'Applications/18.12'.

On loading port widgets from xmi file setup connected state

This fixes the issue that the port jumps to the top edge of
the component on movement.

M  +3    -0    umbrello/umlwidgets/childwidgetplacement.h
M  +5    -0    umbrello/umlwidgets/childwidgetplacementpin.cpp
M  +1    -0    umbrello/umlwidgets/childwidgetplacementpin.h
M  +29   -0    umbrello/umlwidgets/childwidgetplacementport.cpp
M  +1    -0    umbrello/umlwidgets/childwidgetplacementport.h
M  +6    -0    umbrello/umlwidgets/pinportbase.cpp
M  +1    -0    umbrello/umlwidgets/pinportbase.h

https://commits.kde.org/umbrello/2fe1bbce7695afa160645c90b8be7062b24e4d9d
Comment 3 Gerhard Landsmann 2019-02-03 16:27:19 UTC
PLEASE GET ME OFF THE DISTRIBUTION!!!


Am 03.02.19 um 14:16 schrieb Ralf Habacker:
> https://bugs.kde.org/show_bug.cgi?id=403622
>
> Ralf Habacker <ralf.habacker@freenet.de> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>               Blocks|                            |403515
>
>
> Referenced Bugs:
>
> https://bugs.kde.org/show_bug.cgi?id=403515
> [Bug 403515] Ports on component diagram are randomly disappeared