Fix 'Incorrect port positions when loading old files'

BUG:403622
FIXED-IN: 2.27.2 (KDE Appplications 18.12.2)